--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     // If you want to additionally use the CameraX Extensions library
     // implementation "androidx.camera:camera-extensions:${camerax_version}"
 
-    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
+    implementation 'io.github.limpbrains:qr:0.0.1'
 }
 repositories {
     mavenCentral()
