--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -4,4 +4,4 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'CameraKitExample'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
-includeBuild('../../../qr')
+// includeBuild('../../../qr')
